--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-27 15:49 | 31 ℃ | 78 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-27 16:04 | 31 ℃ | 77 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-27 16:19 | 31 ℃ | 78 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-27 16:34 | 31 ℃ | 77 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-27 18:04 | 30 ℃ | 77 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-27 18:19 | 30 ℃ | 78 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-27 18:34 | 30 ℃ | 79 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-27 18:49 | 29 ℃ | 80 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
