--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-28 06:34 | 26 ℃ | 78 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-28 06:49 | 26 ℃ | 78 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-28 07:04 | 26 ℃ | 78 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-28 07:19 | 27 ℃ | 78 ％|指数  27  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-28 08:49 | 30 ℃ | 77 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-28 09:03 | 31 ℃ | 74 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-28 09:18 | 32 ℃ | 72 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-05-28 09:33 | 32 ℃ | 71 ％|指数  32  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
