--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-29 05:30 | 25 ℃ | 74 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-29 05:45 | 25 ℃ | 74 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-29 06:00 | 25 ℃ | 74 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-29 06:15 | 25 ℃ | 74 ％|指数  25  <font color= green >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-29 07:51 | 29 ℃ | 75 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-29 08:06 | 29 ℃ | 75 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-29 08:21 | 29 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-29 08:36 | 29 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
