--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-30 01:06 | 27 ℃ | 63 ％|指数  25  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-30 01:21 | 27 ℃ | 63 ％|指数  25  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-30 01:36 | 27 ℃ | 63 ％|指数  25  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-30 01:51 | 27 ℃ | 63 ％|指数  25  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-30 03:21 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-30 03:36 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-30 03:51 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
+  <font size=+1> 2020-05-30 04:06 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
