--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-30 05:36 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-30 05:51 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-30 06:06 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-30 06:21 | 26 ℃ | 64 ％|指数  25  <font color= green >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-30 07:56 | 28 ℃ | 79 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-30 08:11 | 28 ℃ | 79 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-30 08:26 | 28 ℃ | 79 ％|指数  28  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-30 08:41 | 29 ℃ | 79 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
