--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-30 09:26 | 29 ℃ | 81 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-30 09:41 | 29 ℃ | 81 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-30 09:56 | 29 ℃ | 81 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-30 10:11 | 29 ℃ | 83 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-30 11:41 | 31 ℃ | 84 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-30 11:56 | 31 ℃ | 84 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-30 12:11 | 32 ℃ | 82 ％|指数  33  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-05-30 12:26 | 32 ℃ | 81 ％|指数  33  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
