--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-31 18:55 | 28 ℃ | 80 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-31 19:41 | 29 ℃ | 80 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-31 19:59 | 29 ℃ | 79 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-31 20:12 | 29 ℃ | 80 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-31 21:40 | 27 ℃ | 83 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-31 21:55 | 27 ℃ | 84 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-31 22:10 | 27 ℃ | 80 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-31 22:25 | 27 ℃ | 86 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
