--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
   <font size=+1> 2020-06-01 19:10 | 29 ℃ | 82 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-01 19:25 | 28 ℃ | 82 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
