--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <font size=+1> 2020-06-01 19:55 | 28 ℃ | 83 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-01 20:10 | 27 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-01 20:25 | 27 ℃ | 84 ％|指数  28  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-01 20:40 | 27 ℃ | 84 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
