--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <font size=+1> 2020-06-01 21:10 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 21:25 | 26 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 21:40 | 26 ℃ | 85 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-06-01 21:55 | 26 ℃ | 86 ％|指数  28  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
