--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-01 20:25 | 27 ℃ | 84 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-01 20:40 | 27 ℃ | 84 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 20:55 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 21:10 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-01 22:40 | 26 ℃ | 85 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 22:55 | 26 ℃ | 86 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 23:10 | 25 ℃ | 86 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-06-01 23:25 | 25 ℃ | 86 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
