--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-02 19:26 | 29 ℃ | 89 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-02 19:41 | 29 ℃ | 85 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-02 19:56 | 29 ℃ | 88 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-02 20:11 | 29 ℃ | 89 ％|指数  31  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-02 21:41 | 27 ℃ | 87 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-02 21:56 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-02 22:11 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-02 22:26 | 27 ℃ | 90 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
