--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-03 05:11 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 05:26 | 25 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 05:41 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 05:56 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-03 07:26 | 27 ℃ | 91 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-03 07:41 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-03 07:56 | 28 ℃ | 95 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-03 08:11 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
