--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-03 05:56 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 06:11 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 06:26 | 26 ℃ | 91 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-03 06:41 | 26 ℃ | 89 ％|指数  28  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-03 08:11 | 29 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-03 08:26 | 30 ℃ | 95 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-03 08:41 | 30 ℃ | 94 ％|指数  33  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-03 08:56 | 31 ℃ | 92 ％|指数  33  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
