--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-04 19:08 | 32 ℃ | 79 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-04 19:23 | 31 ℃ | 79 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-04 19:38 | 31 ℃ | 79 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-04 19:53 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-04 21:23 | 29 ℃ | 81 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-04 21:38 | 28 ℃ | 81 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-04 21:53 | 28 ℃ | 82 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-04 22:08 | 28 ℃ | 82 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
