--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-04 23:38 | 28 ℃ | 82 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-04 23:53 | 27 ℃ | 82 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-05 00:08 | 27 ℃ | 82 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-05 00:23 | 27 ℃ | 82 ％|指数  28  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-05 01:53 | 27 ℃ | 83 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-05 02:08 | 27 ℃ | 83 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-05 02:23 | 27 ℃ | 83 ％|指数  28  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-06-05 02:38 | 27 ℃ | 83 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
