--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-06 06:24 | 27 ℃ | 88 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 06:39 | 27 ℃ | 88 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 06:54 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 07:09 | 29 ℃ | 95 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-06 08:39 | 32 ℃ | 90 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 08:54 | 32 ℃ | 89 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 09:09 | 32 ℃ | 89 ％|指数  34  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-06 09:24 | 32 ℃ | 88 ％|指数  34  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
