--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-06 13:24 | 34 ℃ | 80 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 13:39 | 34 ℃ | 80 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 13:54 | 34 ℃ | 80 ％|指数  34  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 14:09 | 34 ℃ | 80 ％|指数  34  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-06 15:39 | 33 ℃ | 71 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-06 15:54 | 31 ℃ | 71 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 16:09 | 30 ℃ | 71 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-06 16:24 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
