--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-06 18:24 | 26 ℃ | 74 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-06 18:39 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-06 18:54 | 28 ℃ | 81 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 19:09 | 29 ℃ | 80 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-06 20:39 | 29 ℃ | 80 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 20:54 | 28 ℃ | 80 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-06 21:09 | 28 ℃ | 81 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-06 21:24 | 28 ℃ | 81 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
