--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-09 09:57 | 24 ℃ | 95 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-09 10:12 | 24 ℃ | 95 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-09 10:27 | 24 ℃ | 95 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-09 10:42 | 24 ℃ | 95 ％|指数  26  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-09 12:12 | 27 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-09 12:27 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-09 12:42 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-06-09 12:57 | 28 ℃ | 95 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
